--- a/cliente/elements/proposal-model.html
+++ b/cliente/elements/proposal-model.html
@@ -30,10 +30,11 @@
             callback();
           });
         },
-        getAll: function (callback) {
-          doAjax({type: 'GET', url: "/"}, function (result) {
+        getAll: function (token,callback) {
+          doAjax({type: 'GET', url: "/" +token }, function (result) {
             callback(result);
           }, function (error) {
+              
             callback();
           });
         },
