--- a/cliente/pages/products-container.html
+++ b/cliente/pages/products-container.html
@@ -1,130 +1,140 @@
 
 <polymer-element name="products-container">
-  <template>
-    <style>
-      :host {
-      }
-      #core_card {
-        margin-top: 15px;
-        background-color: rgba(238, 238, 238, 0.6);
-        border: solid 1px rgba(255, 255, 255, 0.4);
-        border-radius: 5px;
-        height: 250px;
-        padding-top: 20px;
-      }
-      #img{
-        width: 100%;
-        height: 100%;
-      }
-      #imgContainer{
-        height: 150px;
-        width: 150px;
-        margin-top: 30px;
-        border: 3px solid rgb(3, 55, 94);
-      }
-      core-input#title /deep/ #input,textarea{
-        text-align:center;
-        color: black;
-      }
-      core-input#shipping /deep/ #input,textarea{
-        text-align:center;
-      }
-      #title{
-        width: 100%;
-        color:white;
+    <template>
+        <style>
+            :host {
+            }
+            #core_card {
+                margin-top: 15px;
+                background-color: rgba(238, 238, 238, 0.6);
+                border: solid 1px rgba(255, 255, 255, 0.4);
+                border-radius: 5px;
+                height: 250px;
+                padding-top: 20px;
+            }
+            #img{
+                width: 100%;
+                height: 100%;
+            }
+            #imgContainer{
+                height: 150px;
+                width: 150px;
+                margin-top: 30px;
+                border: 3px solid rgb(3, 55, 94);
+            }
+            core-input#title /deep/ #input,textarea{
+                text-align:center;
+                color: black;
+            }
+            core-input#shipping /deep/ #input,textarea{
+                text-align:center;
+            }
+            #title{
+                width: 100%;
+                color:white;
 
-      }
-      #shipping{
-        width: 100%;
-        color:rgba(255,255,255,0.7);
-        margin-top: 10px;
-      }
-      #img{
-        height: 100%;
-        width: 100%;
-        margin-bottom: 50px;
-      }
-      .fancy::shadow .core-tooltip {
-        opacity: 2;
-        -webkit-transition: all 300ms cubic-bezier(0,1.92,.99,3.07);
-        transition: all 300ms cubic-bezier(0,1.92,1.99,1.07);
-        -webkit-transform: translate3d(0px, 20px, 0);
-        transform: translate3d(0px, -12px, 0);
-      }
-      .fancy:hover::shadow .core-tooltip, .fancy:focus::shadow .core-tooltip {
-        opacity: 1;
-        -webkit-transform: translate3d(0, 0, 0);
-        transform: translate3d(0, 2px, 0);
-      }
-      #logo {
-        height: 70px;
-        width: 90px;
-        margin-left: 90%;
-      }
-      paper-spinner.blue::shadow .circle {
-        border-color: rgb(24, 87, 134);
-      }
-      #divSpinner {
-        width: 100%;
-        height: 60px;
-        margin-top: 10px;
-      }
+            }
+            #shipping{
+                width: 100%;
+                color:rgba(255,255,255,0.7);
+                margin-top: 10px;
+            }
+            #img{
+                height: 100%;
+                width: 100%;
+                margin-bottom: 50px;
+            }
+            .fancy::shadow .core-tooltip {
+                opacity: 2;
+                -webkit-transition: all 300ms cubic-bezier(0,1.92,.99,3.07);
+                transition: all 300ms cubic-bezier(0,1.92,1.99,1.07);
+                -webkit-transform: translate3d(0px, 20px, 0);
+                transform: translate3d(0px, -12px, 0);
+            }
+            .fancy:hover::shadow .core-tooltip, .fancy:focus::shadow .core-tooltip {
+                opacity: 1;
+                -webkit-transform: translate3d(0, 0, 0);
+                transform: translate3d(0, 2px, 0);
+            }
+            #logo {
+                height: 70px;
+                width: 90px;
+                margin-left: 90%;
+            }
+            paper-spinner.blue::shadow .circle {
+                border-color: rgb(24, 87, 134);
+            }
+            #divSpinner {
+                width: 100%;
+                height: 60px;
+                margin-top: 10px;
+            }
 
-    </style>
-    <using-api id="usingApi"></using-api>
+        </style>
+        <using-api id="usingApi"></using-api>
+        <core-dropdown-menu id="drop" label="Sort by:" valueattr="label">
+            
+                <paper-item label="Lowest price" id="Low" on-click="{{searchObject}}">Lowest price first</paper-item>
+                <paper-item label="Highest price" id="High" on-click="{{searchObject}}">Highest price first</paper-item>
+                
+        </core-dropdown-menu>
 
-    <template repeat="{{ product in products.item }}">  
-      <core-card id="core_card" layout vertical center >
-        <div layout vertical center style="width: 60%;">
-          <div style="width: 100%;">
-            <core-input id="title" readonly  value="{{ product.title[0] }}"></core-input>
-          </div>
-          <div layout horizontal center>
-            <div layout vertical center style="width: 100%;">
-              <core-tooltip label="View Product " position="bottom" class="fancy">
-                <div id="imgContainer">
-                  <a href="{{ product.viewItemURL[0] }}"><img id ="img" src="{{ product.galleryURL[0] }}"></a>
+        <template repeat="{{ product in products.item }}">  
+            <core-card id="core_card" layout vertical center >
+                <div layout vertical center style="width: 60%;">
+                    <div style="width: 100%;">
+                        <core-input id="title" readonly  value="{{ product.title[0] }}"></core-input>
+                    </div>
+                    <div layout horizontal center>
+                        <div layout vertical center style="width: 100%;">
+                            <core-tooltip label="View Product " position="bottom" class="fancy">
+                                <div id="imgContainer">
+                                    <a href="{{ product.viewItemURL[0] }}"><img id ="img" src="{{ product.galleryURL[0] }}"></a>
+                                </div>
+                            </core-tooltip>
+                        </div>
+                        <div layout vertical center style="width: 100%; background-color: rgba(29, 100, 155, 0.5); border: 2px solid rgb(3, 55, 94); padding: 2px; margin-top: 30px;">
+                            <core-input id="title" readonly  value="{{product.sellingStatus[0].convertedCurrentPrice[0].__value__}} {{ product.sellingStatus[0].convertedCurrentPrice[0]['@currencyId'] }}"></core-input>
+                            <core-input id="shipping" readonly  value="Shipping cost: {{ product.shippingInfo[0].shippingServiceCost[0].__value__ }} {{ product.shippingInfo[0].shippingServiceCost[0]['@currencyId'] }}"></core-input>
+                        </div>
+                    </div>
                 </div>
-              </core-tooltip>
-            </div>
-            <div layout vertical center style="width: 100%; background-color: rgba(29, 100, 155, 0.5); border: 2px solid rgb(3, 55, 94); padding: 2px; margin-top: 30px;">
-              <core-input id="title" readonly  value="{{product.sellingStatus[0].convertedCurrentPrice[0].__value__}} {{ product.sellingStatus[0].convertedCurrentPrice[0]['@currencyId'] }}"></core-input>
-              <core-input id="shipping" readonly  value="Shipping cost: {{ product.shippingInfo[0].shippingServiceCost[0].__value__ }} {{ product.shippingInfo[0].shippingServiceCost[0]['@currencyId'] }}"></core-input>
-            </div>
-          </div>
+                <img id ="logo" src="../img/EBay_logo.png" >
+            </core-card>
+
+        </template>
+
+        <div id="divSpinner" layout vertical center>
+            <paper-spinner id="spinner"  class="blue"></paper-spinner>
         </div>
-        <img id ="logo" src="../img/EBay_logo.png" >
-      </core-card>
 
     </template>
 
-    <div id="divSpinner" layout vertical center>
-      <paper-spinner id="spinner"  class="blue"></paper-spinner>
-    </div>
 
-  </template>
+    <script>
 
-
-  <script>
-
-    Polymer({
-      data: {
-        value: 0
-      },
-      loadData: function (result) {
-        console.log(result);
-        var items = result.findItemsByKeywordsResponse[0].searchResult[0];
-        this.$.spinner.active = true;
-        if (this.products) {
-          this.products.item = this.products.item.concat(items.item);
-        } else {
-          this.products = items;
-          this.data.value = 1;
-        }
-      },
-      emptyArray: function () {
-        this.products.item.length = 0;
-      }
-    });
-  </script>
+        Polymer({
+            data: {
+                value: 0
+            },
+            loadData: function (result) {
+                console.log(result);
+                var items = result.findItemsByKeywordsResponse[0].searchResult[0];
+                this.$.spinner.active = true;
+                if (this.products) {
+                    this.products.item = this.products.item.concat(items.item);
+                } else {
+                    this.products = items;
+                    this.data.value = 1;
+                }
+            },
+            emptyArray: function () {
+                this.products.item.length = 0;
+            },
+            searchObject:function(event,detail,sender){
+               console.log(sender.id);
+               this.fire('search-object',{order: sender.id});
+            }
+        });
+    </script>
 </polymer-element>
